✨ [FEAT] Implémentation des RG